Fix: submenu behind contents

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -234,6 +234,7 @@ table {
     top: 100%;
     right: 0;
     flex-direction: column;
+    z-index: 10;
     background-color: $color-header-background;
   }
 }
